k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: replicated-node
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: gkgdev/replicated-node
          ports:
            - containerPort: 5000
